Fix stretching in Bulma columns

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -11,6 +11,10 @@ h2 {
   letter-spacing: 5px;
 }
 
+.columns {
+  width: 100%;
+}
+
 .project {
   border-radius: 5px;
   overflow: hidden;
